# mario

./: CMakeLists.txt  CTestConfig.cmake  LICENSE  README.md  build.sh  mario.xlsx
data/: mario-castro.xlsx
include/: CMakeLists.txt
include/mario/: CMakeLists.txt  mario.h
src/: CAPI.cpp  CMakeLists.txt  Config.h.in  Debug.h  File.cpp  File.h  Releasable.cpp  Releasable.h  Repository.cpp  Repository.h  Structs.h
src/tools/: CMakeLists.txt  mario_castro.c  mario_castro_weights.c
tests/: CMakeLists.txt  Makefile.tests
tests/00_common/: mario_test.h
tests/01_repository_print/: CMakeLists.txt  Makefile  test01_repository_print.c
tests/02_repository_formula/: CMakeLists.txt  Makefile  test02_repository_formula.c
tools/: CMakeLists.txt  mario_castro.c
